<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".activities.KategoriActivity">

    <ImageView
        android:id="@+id/imgLogo3"
        android:layout_width="0dp"
        android:layout_height="294dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtOyuncuAd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorOyuncuTxt"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo3"
        tools:text="Oyuncu Adı" />

    <Button
        android:id="@+id/btnCikis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:background="@drawable/btn_basic"
        android:shadowColor="@color/black"
        android:shadowDx="0"
        android:shadowDy="7"
        android:shadowRadius="8"
        android:text="@string/btnCikisTxt"
        android:textColor="@color/colorCikisTxt"
        android:textSize="@dimen/btnbasic_txt_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnKategori2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_kategori"
        android:shadowColor="@color/black"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="12"
        android:text="@string/btnKategori2"
        android:textColor="@color/white"
        android:textSize="@dimen/btn_kategori_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnKategori1" />

    <Button
        android:id="@+id/btnKategori1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn_kategori"
        android:shadowColor="@color/black"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="12"
        android:text="@string/btnKategori1"
        android:textColor="@color/white"
        android:textSize="@dimen/btn_kategori_size"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtOyuncuAd" />

    <ImageView
        android:id="@+id/imgIcon1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/btnKategori2"
        app:layout_constraintEnd_toStartOf="@+id/btnKategori1"
        app:layout_constraintHorizontal_bias="0.682"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_icon1" />

    <ImageView
        android:id="@+id/imgIcon2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toStartOf="@+id/btnKategori2"
        app:layout_constraintHorizontal_bias="0.682"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgIcon1"
        app:srcCompat="@drawable/ic_icon2" />
</androidx.constraintlayout.widget.ConstraintLayout>